Extended error-report table, made further improvements and fixed some bugs

--- a/templates/default/tpl.file_error_report_row.html
+++ b/templates/default/tpl.file_error_report_row.html
@@ -1,12 +1,21 @@
 <tr class="{CSS_ROW}">
 	<td class="std">
-		{TXT_VERSION}
+		{TXT_CURRENT_VERSION}
+	</td>
+	<td class="std">
+		{TXT_CORRECT_VERSION}
 	</td>
 	<td class="std">
 		{TXT_DATE}
 	</td>
 	<td class="std">
-		<a href="{DL_LINK}">{TXT_FILENAME}</a>
+		{LINK_OPENING_TAG}{TXT_FILENAME}{LINK_CLOSING_TAG}
+	</td>
+	<td class="std">
+		{TXT_CURRENT_PATH}
+	</td>
+	<td class="std">
+		{TXT_CORRECT_PATH}
 	</td>
 	<td class="std">
 		{TXT_NUMBERED_CORRECTLY}
