Added file directory info and shortened the paths inside the table to decrease the likelihood of excessive table widths

--- a/templates/default/tpl.version_report_table.html
+++ b/templates/default/tpl.version_report_table.html
@@ -143,6 +143,22 @@
 		<div class="ilFormHeader">
 			{VERSION_REPORT_TABLE_TITLE}
 		</div>
+		<div class="form-horizontal col-sm-12" style="padding: 10px 0 5px">
+			<div class="col-sm-12">
+				<label class="col-sm-3 control-label">
+					{VERSION_REPORT_TABLE_LABEL_FILE_DIR}
+				</label>
+				<div class="col-sm-9">
+					<span class="form-control-static">
+						{VERSION_REPORT_TABLE_CONTENT_FILE_DIR}
+					</span>
+					<div class="help-block">
+						{VERSION_REPORT_TABLE_INFO_FILE_DIR}
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- BEGIN tbl_table_start -->
 		<div class="table-responsive">
 			<table class="table table-striped {CSS_TABLE}" {WIDTH} {ID} datatable="{DATA_TABLE}">
