Created patching functionality (critical, untested parts currently commented out) and confirmation request

--- a/templates/default/tpl.version_report_table_row.html
+++ b/templates/default/tpl.version_report_table_row.html
@@ -12,6 +12,9 @@
 		{LINK_OPENING_TAG}{TXT_FILENAME}{LINK_CLOSING_TAG}
 	</td>
 	<td class="std">
+		{TXT_UPLOADED_BY}
+	</td>
+	<td class="std">
 		{TXT_CURRENT_PATH}
 	</td>
 	<td class="std">
