Improved code structure and naming for facilitated maintenance as well as creating base structure for future patch report

--- a/templates/default/tpl.report.html
+++ b/templates/default/tpl.report.html
@@ -1,6 +1,6 @@
 <h3 class="ilHeader">
-	{ERROR_REPORT_TITLE}
+	{REPORT_TITLE}
 </h3>
 <div style="height: 10px;"></div>
 
-{VERSION_REPORT_TABLE}
+{REPORT_TABLE}
