Created patch report and made some changes to the naming of language variables to prevent duplicates

--- a/templates/default/tpl.file_patch_report_table_row.html
+++ b/templates/default/tpl.file_patch_report_table_row.html
@@ -6,6 +6,9 @@
 		{TXT_PREVIOUS_VERSION}
 	</td>
 	<td class="std">
+		{TXT_CORRECT_VERSION}
+	</td>
+	<td class="std">
 		{TXT_DATE}
 	</td>
 	<td class="std">
@@ -21,6 +24,12 @@
 		{TXT_PREVIOUS_PATH}
 	</td>
 	<td class="std">
-		{TXT_FLAGGED_AS_LOST}
+		{TXT_CORRECT_PATH}
+	</td>
+	<td class="std">
+		{TXT_FILE_EXISTS}
+	</td>
+	<td class="std">
+		{TXT_TYPE}
 	</td>
 </tr>
