--- a/templates/default/tpl.file_patch_report_db_section.html
+++ b/templates/default/tpl.file_patch_report_db_section.html
@@ -24,6 +24,16 @@
 	</div>
 	<div class="col-sm-12">
 		<label class="col-sm-3 control-label">
+			{DB_REPORT_LABEL_CORRECT_VERSION}
+		</label>
+		<div class="col-sm-9">
+		<span class="form-control-static">
+			{DB_REPORT_CONTENT_CORRECT_VERSION}
+		</span>
+		</div>
+	</div>
+	<div class="col-sm-12">
+		<label class="col-sm-3 control-label">
 			{DB_REPORT_LABEL_PATCHED_MAX_VERSION}
 		</label>
 		<div class="col-sm-9">
@@ -39,6 +49,16 @@
 		<div class="col-sm-9">
 		<span class="form-control-static">
 			{DB_REPORT_CONTENT_PREVIOUS_MAX_VERSION}
+		</span>
+		</div>
+	</div>
+	<div class="col-sm-12">
+		<label class="col-sm-3 control-label">
+			{DB_REPORT_LABEL_CORRECT_MAX_VERSION}
+		</label>
+		<div class="col-sm-9">
+		<span class="form-control-static">
+			{DB_REPORT_CONTENT_CORRECT_MAX_VERSION}
 		</span>
 		</div>
 	</div>
